# pyaesthetics

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.txt
.github/workflows/: ci.yml  draft-pdf.yml
docs/: Makefile  api.rst  bookthings.rst  brightnessadjusment.rst  brightnessadjustment.rst  cakedLisa.rst  colorDetection.rst  conf.py  contrast.rst  examples.rst  features.rst  gettingstarted.rst  index.rst  make.bat  palette.rst  quadTree.rst  requirements.txt  saturation.rst
docs/_autosummary/: analysis.rst  pyaesthetics.analysis.analyzeImage.rst  pyaesthetics.analysis.rst  pyaesthetics.brightness.relativeLuminance_BT709.rst  pyaesthetics.brightness.relativeluminance_bt709.rst  pyaesthetics.brightness.rst  pyaesthetics.colorfulness.colorfulnessHSV.rst  pyaesthetics.colorfulness.colorfulness_hsv.rst  pyaesthetics.colorfulness.rst  pyaesthetics.contrast.rst  pyaesthetics.faceDetection.detectFaces.rst  pyaesthetics.faceDetection.rst  pyaesthetics.facedetection.detect_faces_cv2.rst  pyaesthetics.linesDetection.analyseLines.rst  pyaesthetics.linesDetection.getCurvedLines.rst  pyaesthetics.linesDetection.getLinesRatio.rst  pyaesthetics.linesDetection.rst  pyaesthetics.linesdetection.analyse_lines.rst  pyaesthetics.linesdetection.calculate_distance.rst  pyaesthetics.quadtreedecomposition.quadTree.rst  pyaesthetics.rst  pyaesthetics.selfsimilarity.bin_hog_features.rst  pyaesthetics.selfsimilarity.calculate_hog.rst  pyaesthetics.selfsimilarity.get_self_similarity.rst  pyaesthetics.selfsimilarity.preprocess_image.rst  pyaesthetics.selfsimilarity.resize.rst  pyaesthetics.selfsimilarity.rst  pyaesthetics.selfsimilarity.selfsimilarity.rst  pyaesthetics.spaceBasedDecomposition.getAreas.rst  pyaesthetics.spaceBasedDecomposition.rst  pyaesthetics.spaceBasedDecomposition.textImageRatio.rst  pyaesthetics.spacebaseddecomposition.get_areas.rst  pyaesthetics.spacebaseddecomposition.text2image_ratio.rst  pyaesthetics.symmetry.get_symmetry.rst  pyaesthetics.symmetry.quadTree.rst  pyaesthetics.symmetry.rst  pyaesthetics.utils.calculate_gradient.rst  pyaesthetics.utils.find_child_nodes.rst  pyaesthetics.utils.find_neighbors.rst  pyaesthetics.utils.rst  (+2 more)
docs/_build/doctrees/: analysis.doctree  api.doctree  brightness.doctree  cakedLisa.doctree  colorDetection.doctree  colorfulness.doctree  environment.pickle  examples.doctree  faceDetection.doctree  features.doctree  gettingstarted.doctree  index.doctree  palette.doctree  quadTree.doctree  symmetry.doctree
docs/_build/html/: .buildinfo  analysis.html  brightness.html  colorDetection.html  colorfulness.html  (+11 more)
docs/_templates/: custom-module-template.rst
docs/html/: .buildinfo  api.html  cakedLisa.html  examples.html  features.html  genindex.html  gettingstarted.html  index.html  objects.inv  palette.html  py-modindex.html  search.html  searchindex.js
paper/: paper.bib  paper.md
prettywebsite/: __init__.py  analysis.py  brightness.py  colorDetection.py  colorfulness.py  faceDetection.py  quadTreeDecomposition.py  selfsimilarity.py  spaceBasedDecomposition.py  symmetry.py
prettywebsite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyaesthetics/: __init__.py  analysis.py  brightness.py  colorDetection.py  color_detection.py  colordetection.py  colorfulness.py  contrast.py  faceDetection.py  face_detection.py  facedetection.py  linesDetection.py  linesdetection.py  quadTreeDecomposition.py  quadtreedecomposition.py  saturation.py  self_similarity.py  selfsimilarity.py  spaceBasedDecomposition.py  space_based_decomposition.py  spacebaseddecomposition.py  symmetry.py  utils.py  visual_complexity.py  visualcomplexity.py
pyaesthetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyaesthetics/utils/: __init__.py  color.py  quad_tree_decomposition.py  testing.py  text.py
tests/: analysis_test.py  brightness_test.py  color_detection_test.py  colorfulness_test.py  contrast_test.py  face_detection_test.py  saturation_test.py  space_based_decomposition_test.py  symmetry_test.py  visual_complexity_test.py
tests/utils/: quad_tree_decomposition_test.py
tutorial/: MonaLisaVsCakedLisa-checkpoint.ipynb  Tutorial_v0.0.3.ipynb
tutorial/.ipynb_checkpoints/: MonaLisaVsCakedLisa-checkpoint.ipynb
(+239 files in other folders)
